# MRRSoundDecoder

./: .gitignore  README.md
audio/: wave.c
decodervm/: engine.c  project.c  slot.c  utils.c  vm.c
esp32/: CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults.esp32s3
esp32/components/decodervm/: CMakeLists.txt  main.c
esp32/components/engine/: CMakeLists.txt  engine.c  main.c
esp32/components/player/: CMakeLists.txt  Kconfig.projbuild  i2s_pins.h  player.c
esp32/components/script/: .gitignore  CMakeLists.txt
esp32/components/sd/: CMakeLists.txt  Kconfig.projbuild  sd.c  sd.h
esp32/components/storage/: CMakeLists.txt  Kconfig.projbuild  littlefs.c  sd.c  spiffs.c  storage.h
esp32/components/web/: CMakeLists.txt  Kconfig.projbuild  main.c  web.c  web.h
esp32/components/web/assets/: index.html
esp32/components/wifi/: Kconfig.projbuild
esp32/main/: CMakeLists.txt  main.c  project.h
include/: audio.h  bytecode.h  clock.h  engine.h  player.h  project.h  schedule.h  slot.h  utils.h  variables.h  vm.h
sample/: CMakeLists.txt  player.c  sample.c
